# MathProblem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  resource.h  resource.rc  updater_gui.cpp
.github/workflows/: build.yml
include/: file.cpp  file.h  gui.cpp  gui.h  log.cpp  log.h  problem.cpp  problem.h  utils.cpp  utils.h
release-0.1/: output.txt
updater/: update.cpp  update.h
